--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,7 +30,14 @@ repos:
     rev: 1.9.1
     hooks:
       - id: nbqa-ruff
+  - repo: https://github.com/tox-dev/tox-toml-fmt
+    rev: "v1.0.0"
+    hooks:
+      - id: tox-toml-fmt
+  - repo: https://github.com/tox-dev/pyproject-fmt
+    rev: "v2.5.1"
+    hooks:
+      - id: pyproject-fmt
   - repo: meta
     hooks:
-      - id: check-hooks-apply
       - id: check-useless-excludes
