Add base package
Signed-off-by: Bernát Gábor <bgabor8@bloomberg.net>

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,14 +1,5 @@
-/.venv
-/.*_cache
-/.github
-/node_modules
-/Dockerfile
-/binder
-/README.md
-/tox.toml
-/pyproject.toml
-/.git
-/.tox
-/.pre-commit-config.yaml
-/.dockerignore
-/.gitignore
+.venv
+.*_cache
+node_modules
+.tox
+dist
