--- a/.dockerignore
+++ b/.dockerignore
@@ -1,14 +1,5 @@
-/.venv
+.venv
 /.*_cache
-/.github
 /node_modules
-/Dockerfile
-/binder
-/README.md
-/tox.toml
-/pyproject.toml
-/.git
 /.tox
-/.pre-commit-config.yaml
-/.dockerignore
-/.gitignore
+dist
